Redirection and new insertion

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,5 +9,7 @@
     <h1>Show Campground</h1>
     <h2><%= campground.title  %></h2>
     <h3><%= campground.location  %></h3>
+
+    <form action="/campgrounds/"></form>
 </body>
 </html>
