--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-<body>
-    <h1>All Campgrounds</h1>
+<% layout('layouts/boilerplate') %>
 
-    <ul>
-        <% for(let camp of campgrounds) {%>
-            <li><a href="/campgrounds/<%= camp.id %>">
-                <%= camp.title  %>
+<h1>All Campgrounds</h1>
+
+<a href="/campgrounds/new">
+    <button>Create campground</button>
+</a>
+
+<ul>
+    <% for(let camp of campgrounds) {%>
+        <li><a href="/campgrounds/<%= camp.id %>">
+                <%= camp.title %>
             </a></li>
         <% } %>
-    </ul>
-</body>
-</html>
+</ul>
