--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,11 +1,38 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>Edit campground</h1>
+<div class="row">
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds/<%= camp.id %>/edit?_method=PUT" method="post"></form>
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="title" value="<%= camp.title %>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="location" value="<%= camp.location %>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Image Url</label>
+                <input class="form-control" type="text" id="image" name="image" value="<%= camp.image %>">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Campground Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
+                        aria-describedby="price-label" name="price" value="<%= camp.price %>">
+                </div>
+            </div>
 
-<form action="/campgrounds/<%= camp.id %>/edit?_method=PUT" method="post">
-    <label for="title">Title for the campground : </label><br>
-    <input type="text" name="title" id="title" value="<%= camp.title %> "><br>
-    <label for="location">Location of the campground : </label><br>
-    <input type="text" name="location" id="location" value="<%= camp.location %>"><br>
-    <button>Submit</button>
-</form>
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="description"><%= camp.description %></textarea>
+            </div>
+            <div class="mb-3">
+                <button class="btn btn-info">Update Campground</button>
+            </div>
+        </form>
+    </div>
+</div>
+
