--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,25 @@
     <button>Create campground</button>
 </a>
 
-<ul>
-    <% for(let camp of campgrounds) {%>
-        <li><a href="/campgrounds/<%= camp.id %>">
-                <%= camp.title %>
-            </a></li>
-        <% } %>
-</ul>
+<% for(let campground of campgrounds) { %>
+<div class="card mb-3">
+    <div class="row">
+        <div class="col-md-4">
+            <img src="<%= campground.image %>" alt="" class="img-fluid">
+        </div>
+        <div class="col-md-8">
+            <h5 class="card-title"><%= campground.title %></h5>
+            <p class="card-text"><%= campground.description  %></p>
+            <p class="card-text">
+                <small class="text-muted">
+                    <%= campground.location %>
+                </small>
+            </p>
+            <a href="/campgrounds/<%= campground.id %>" class="btn btn-primary">
+                View Campground
+            </a>
+        </div>
+    </div>
+</div>
+
+<% } %>
