--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div class="card mb-5" style="width: 40rem;">
+<div class="card mb-5" style="width: 40rem; margin : 2vw auto 2vw auto;">
     <img src="<%= campground.image %>" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%= campground.title %></h5>
