Added review section

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,4 +19,32 @@
       </form>
       <a href="/campgrounds" class="card-link btn btn-info" >All Campgrounds</a>
     </div>
+
+    <div style="display: flex ; flex-direction: column; margin-top: 1px solid rgb(184, 184, 184); padding: 1vw;">
+      <h4>Comments</h4>
+      <% for (let comment of campground.reviews){ %>
+        <p><%= comment.comment %></p>
+      <% } %>
+    </div>
+
   </div>
+
+  <h2 style="margin-left: 22vw;">Provide reviews and ratings</h2>
+
+  <form action="/campgrounds/<%= campground.id %>/reviews" method="post">
+    
+    <div style="display: flex; padding: 1vw; width: 40vw; margin : 1vw auto 1vw auto; border-bottom: 1px solid rgb(180, 180, 180)">
+      <label for="rating" class="form-label">Rating</label>
+      <input type="range" max="5" min="1" name="rating" id="rating" style="margin-left: 3vw; width : 15vw;" class="form-range">
+    </div>
+  
+    <div style="display: flex; flex-direction: column; padding: 1vw; width: 40vw; margin : 1vw auto 1vw auto">
+        <label for="comment">Comment</label><br>
+        <textarea name="comment" id="comment" cols="60" rows="5" placeholder="Write your thoughts here...">
+        </textarea>
+        <button class="btn btn-success mt-3">Submit</button>
+    </div>
+
+  </form>
+
+  
