--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,7 +23,12 @@
     <div style="display: flex ; flex-direction: column; margin-top: 1px solid rgb(184, 184, 184); padding: 1vw;">
       <h4>Comments</h4>
       <% for (let comment of campground.reviews){ %>
-        <p><%= comment.comment %></p>
+        <div style="padding : 1vw; background-color : rgb(246, 246, 246) ; border-radius : 10px; margin: 1vw 0vw 0vw 0vw;">
+          <p><%= comment.comment %></p>
+          <form action="/campgrounds/<%= campground.id %>/delete/<%= comment.id %>?_method=DELETE" method="post">
+            <button class="btn btn-light" style="border: 1px solid rgb(216, 215, 215);">Remove</button>
+          </form>
+        </div>
       <% } %>
     </div>
 
