Flash setup completed

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,8 +9,9 @@
 <body class="d-flex flex-column vh-100">
 
     <%- include('../partials/navbar')  %>
-
+    
     <main class="container mt-5">
+      <%- include('../partials/flash')  %>
         <%- body %>
     </main>
 
