--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -10,3 +10,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
+<% if(failure && failure.length) { %>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <%= failure %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+<% } %>
