--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,6 +10,14 @@
           <a class="nav-link" href="/campgrounds">Campgrounds</a>
           <a class="nav-link" href="/campgrounds/new">New campground</a>
         </div>
+        <div class="navbar-nav ml-auto">
+          <% if(!currentUser) { %>
+          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" href="/register">Sign-up</a>
+          <% } else { %>
+          <a class="nav-link" href="/logout">Log-out</a>
+          <% } %>
+        </div>
       </div>
     </div>
 </nav>
