--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
-            <img src="<%= campground.images.url %>" alt="" class="img-fluid">
+            <img src="<%= campground.images[0].url %>" alt="" class="img-fluid">
         </div>
         <div class="col-md-8">
             <h5 class="card-title mt-3"><%= campground.title %></h5>
