--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
+<div id="map" style="width: 100%; height : 40vw; margin-bottom : 2vw;"></div>
+
 <h1 class="mb-5">All Campgrounds</h1>
 
 <a href="/campgrounds/new" class="btn btn-success mb-5">
@@ -28,3 +30,9 @@
 </div>
 
 <% } %>
+
+<script>
+    const mapToken = '<%- process.env.MAPBOX_TOKEN %>'
+    const campgrounds = { features : <%- JSON.stringify(campgrounds) %>}
+</script>
+<script src="clusterMap.js"></script>
