--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div id="map" style="width: 100%; height : 40vw; margin-bottom : 2vw;"></div>
+<div id="map" style="width: 100%; height : 40vw; margin-bottom : 2vw; box-shadow: 0px 0px 20px rgb(184, 248, 255)"></div>
 
 <h1 class="mb-5">All Campgrounds</h1>
 
