--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,11 +12,12 @@
                 <label class="form-label" for="location">Location</label>
                 <input class="form-control" type="text" id="location" name="location" required>
             </div>
-            <input type="file" name="image" id="image" multiple>
-            <!-- <div class="mb-3">
-                <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="image" required>
-            </div> -->
+            <div class="mb-3">
+                <div class="mb-3">
+                    <label class="form-label" for="image">Add images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                </div>
+            </div>
             <div class="mb-3">
                 <label class="form-label" for="price">Campground Price</label>
                 <div class="input-group">
