--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,5 +5,5 @@
     <h4 class="alert-heading">Oops!</h4>
     <p><%= err.message %></p>
     <hr>
-    <p class="mb-0"> Error code : <%= err.stack  %></p>
+    <p class="mb-0"> Error code : <%= err.statusCode  %></p>
 </div>
