--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div id="map" style="width: 100%; height : 40vw; margin-bottom : 2vw; box-shadow: 0px 0px 20px rgb(184, 248, 255)"></div>
+<div id="map" style="width: 100%; height : 40vw; margin-bottom : 2vw; box-shadow: 0px 0px 20px rgb(184, 248, 255); border-radius : 10px;"></div>
 
 <h1 class="mb-5">All Campgrounds</h1>
 
@@ -12,7 +12,7 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
-            <img src="<%= campground.images[0].url %>" alt="" class="img-fluid">
+            <img src="<%= campground.images[0].url %>" alt="" class="img-fluid" crossorigin="anonymous">
         </div>
         <div class="col-md-8">
             <h5 class="card-title mt-3"><%= campground.title %></h5>
