--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,7 +14,7 @@
     <div class="carousel-inner">
       <% campground.images.forEach((image , i ) => { %>
       <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
-        <img src="<%= image.url %>" class="d-block w-100" alt="">
+        <img src="<%= image.url %>" class="d-block w-100" alt="" crossorigin="anonymous">
       </div>
       <% }) %>
 
